style: fix language

--- a/alfred/core.yaml
+++ b/alfred/core.yaml
@@ -3,6 +3,6 @@
   connection: local
 
   tasks:
-    - name: Install Alfred (macOS)
+    - name: Ensure Alfred
       homebrew_cask:
         name: alfred
