--- a/prettyping/core.yaml
+++ b/prettyping/core.yaml
@@ -3,7 +3,7 @@
   connection: local
 
   tasks:
-    - name: Install prettyping
+    - name: Ensure prettyping
       get_url:
         url: https://raw.githubusercontent.com/denilsonsa/prettyping/master/prettyping
         dest: /usr/local/bin/prettyping
