--- a/dotnet/vscode.yaml
+++ b/dotnet/vscode.yaml
@@ -3,7 +3,7 @@
   connection: local
 
   tasks:
-    - name: Install VS Code Extensions
+    - name: Ensure vscode extensions
       command: code --install-extension {{ item }}
       args:
         creates: ~/.vscode/extensions/{{ item }}-*/package.json
