--- a/omz/customization.yaml
+++ b/omz/customization.yaml
@@ -1,9 +1,9 @@
-- name: Oh my zsh
+- name: Oh my zsh (customization)
   hosts: 127.0.0.1
   connection: local
 
   tasks:
-    - name: Enhance terminal prompt
+    - name: Ensure enhanced terminal prompt
       blockinfile:
         dest: ~/.zshrc
         marker: "### {mark} Ansible managed: prompt"
@@ -26,7 +26,7 @@
               prompt_segment $BULLETTRAIN_TIME_BG $BULLETTRAIN_TIME_FG "[$on]"
           }
 
-    - name: Setup aliases
+    - name: Ensure custom aliases
       blockinfile:
         dest: ~/.zshrc
         marker: "### {mark} Ansible managed: aliases"
@@ -43,13 +43,13 @@
           alias grep='grep --colour=auto'
           alias ls='ls -GFh'
 
-    - name: Ensure extras exists
+    - name: Ensure extra configuration
       file:
         path: ~/.zshenv
         state: file
         mode: 0700
 
-    - name: Setup extras
+    - name: Ensure extra configuration is used
       blockinfile:
         dest: ~/.zshrc
         marker: "### {mark} Ansible managed: env"
