--- a/python/vscode.yaml
+++ b/python/vscode.yaml
@@ -3,7 +3,7 @@
   connection: local
 
   tasks:
-    - name: Install VS Code Extension
+    - name: Ensure vscode extensions
       command: code --install-extension {{ item }}
       args:
         creates: ~/.vscode/extensions/{{ item }}-*/package.json
