--- a/python/core.yaml
+++ b/python/core.yaml
@@ -10,3 +10,6 @@
         block: |
           alias python='python3'
           export PATH=$HOME/Library/Python/3.7/bin:$PATH
+    - name: Ensure pyodbc
+      homebrew: 
+        name: unixodbc
